finished RnkRealm first stage